# polaris_ranger_gazebo

./: README.md  example.world
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: platoon_control.pc
devel/lib/platoon_control/: platoon_controller
devel/share/platoon_control/cmake/: platoon_controlConfig.cmake
src/Platoon_Control/: CMakeLists.txt  package.xml
src/Platoon_Control/src/: platoon_control.cpp
src/Platoon_Simulation/: CMakeLists.txt  package.xml
src/Platoon_Simulation/models/platoon_vehicle/: model.sdf
src/Platoon_Simulation/worlds/: example.world
src/Vehicle_plugin/: CMakeLists.txt  package.xml
src/Vehicle_plugin/include/: car_accelerate.h
src/Vehicle_plugin/launch/: patoon_control.launch
src/Vehicle_plugin/models/platoon_vehicle/: model.config  model.sdf
src/Vehicle_plugin/reference/: DRCVehiclePlugin.cc  DRCVehicleROSPlugin.cpp
src/Vehicle_plugin/src/: car_accelerate.cc  car_accelerate.h
src/drcsim_gazebo_plugins/: CMakeLists.txt
